--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     data-endelementdelay="0.3"
 
                     data-endspeed="1200"
-                    data-endeasing="Power4.easeIn"><a href="#" class="theme-btn btn-style-one">Read more about Taxbird Consultancy<span class="fa fa-caret-right"></span></a></div>
+                    data-endeasing="Power4.easeIn"><a href="#about-us" class="theme-btn btn-style-one">Read more about Taxbird Consultancy<span class="fa fa-caret-right"></span></a></div>
             <!-- <div class="tp-caption sfr sfb tp-resizeme"
                     data-x="left" data-hoffset="320"
                     data-y="center" data-voffset="150"
@@ -198,7 +198,7 @@
                     data-elementdelay="0.01"
                     data-endelementdelay="0.3"
                     data-endspeed="1200"
-                    data-endeasing="Power4.easeIn"><a href="#" class="theme-btn btn-style-one">Read more about Taxbird Consultancy<span class="fa fa-caret-right"></span></a></div>
+                    data-endeasing="Power4.easeIn"><a href="#about-us" class="theme-btn btn-style-one">Read more about Taxbird Consultancy<span class="fa fa-caret-right"></span></a></div>
             <!-- <div class="tp-caption sfr sfb tp-resizeme"
                     data-x="left" data-hoffset="320"
                     data-y="center" data-voffset="150"
